// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatastreamProcessMetadataTask renders with tool presets 1`] = `
<Fragment>
  <hr
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  />
  <ForwardRef(Grid)
    container={true}
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      xs={11}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Sequence",
                }
              }
              setValue={[Function]}
              value="seq"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Label",
                }
              }
              setValue={[Function]}
              value="lab"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Description",
                }
              }
              setValue={[Function]}
              value="des"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Individual",
                }
              }
              setValue={[Function]}
              value="ind"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={7}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <label>
              Select a preset tool:
              <ForwardRef(NativeSelect)
                onChange={[Function]}
                value="0"
              >
                <option
                  key="tool_preset_0"
                  value="0"
                >
                  My Tool
                </option>
              </ForwardRef(NativeSelect)>
            </label>
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={5}
        >
          <button
            onClick={[Function]}
          >
            Apply Preset
          </button>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Tool",
                }
              }
              setValue={[Function]}
              value="tool-lab"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Description",
                }
              }
              setValue={[Function]}
              value="tool-des"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Make",
                }
              }
              setValue={[Function]}
              value="tool-mak"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Version",
                }
              }
              setValue={[Function]}
              value="tool-ver"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Serial Number",
                }
              }
              setValue={[Function]}
              value="tool-ser"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        onClick={[MockFunction]}
      >
        <Memo(ForwardRef(AddCircleIcon))
          titleAccess="Add Below"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(IconButton)
        onClick={[MockFunction]}
      >
        <Memo(ForwardRef(DeleteIcon))
          titleAccess="Delete Task"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</Fragment>
`;

exports[`DatastreamProcessMetadataTask renders without tool presets 1`] = `
<Fragment>
  <hr
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  />
  <ForwardRef(Grid)
    container={true}
    spacing={1}
  >
    <ForwardRef(Grid)
      item={true}
      xs={11}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Sequence",
                }
              }
              setValue={[Function]}
              value="seq"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Label",
                }
              }
              setValue={[Function]}
              value="lab"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Description",
                }
              }
              setValue={[Function]}
              value="des"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Individual",
                }
              }
              setValue={[Function]}
              value="ind"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Task Tool",
                }
              }
              setValue={[Function]}
              value="tool-lab"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={3}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Description",
                }
              }
              setValue={[Function]}
              value="tool-des"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Make",
                }
              }
              setValue={[Function]}
              value="tool-mak"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Version",
                }
              }
              setValue={[Function]}
              value="tool-ver"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={2}
        >
          <ForwardRef(FormControl)
            fullWidth={true}
          >
            <BlurSavingTextField
              options={
                Object {
                  "label": "Tool Serial Number",
                }
              }
              setValue={[Function]}
              value="tool-ser"
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={1}
    >
      <ForwardRef(IconButton)
        onClick={[MockFunction]}
      >
        <Memo(ForwardRef(AddCircleIcon))
          titleAccess="Add Below"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(IconButton)
        onClick={[MockFunction]}
      >
        <Memo(ForwardRef(DeleteIcon))
          titleAccess="Delete Task"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</Fragment>
`;
